python_exec_error.log
Error: invalid syntax (app.py, line 2089)
Traceback (most recent call last):
  File "<string>", line 6, in <module>
  File "app.py", line 2089
    else:
    ^^^^
SyntaxError: invalid syntax

